# trading-bot-workspace

./: .gitignore  research-config.yaml
bot/: .coverage  CHANGELOG.md  config.yaml  conftest.py  main.py  pyproject.toml  requirements.txt  status-agent5.json
bot/autoresearch/: loop.py  optuna_study.db  optuna_study.db.ema_h1.bak  optuna_study.db.ema_h1_v2.bak  optuna_study.db.m15.bak  optuna_study.db.mr_h1.bak  params.trend.yaml  params.yaml  params.yaml.bak  params.yaml.locked-20260427.bak  pareto_front.json  results.tsv  results.tsv.bak  results.tsv.dsr_obj.bak  results.tsv.ema_h1.bak  results.tsv.h1.bak  results.tsv.m15.bak  results.tsv.m15_bad.bak  results.tsv.wide_space.bak  visited.json  visited.json.bak-20260429
bot/backtest/: engine.py
bot/bridge_data/: price.json
bot/checkpoints/: state_20260425T133126.json  state_20260425T133126.pkl  state_20260425T133706.json  state_20260425T133706.pkl  state_20260425T135404.json  state_20260425T135404.pkl  state_20260425T135643.json  state_20260425T135643.pkl  state_20260425T140214.json  state_20260425T140214.pkl  state_20260425T140720.json  state_20260425T140720.pkl  state_20260425T141226.json  state_20260425T141226.pkl  state_20260425T141736.json  state_20260425T141736.pkl  state_20260425T142242.json  state_20260425T142242.pkl  state_20260425T142748.json  state_20260425T142748.pkl  us-001.json  us-002.json  us-003.json  us-004.json  us-005.json  us-006.json  us-007.json  us-008.json  us-009.json  us-010.json
bot/dashboard/: README.md  __init__.py  __main__.py  app.py  sources.py
bot/knowledge/: base.py
(+179 files in other folders)
