[project]
name = "mt5-trading-bot"
version = "0.1.0"
description = "Autonomous MT5 trading bot with HTTP bridge, backtesting, and RL-ready strategy framework"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.26",
    "httpx>=0.27",
    "pydantic>=2",
    "pyyaml",
    "pandas",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
